[package]
name = "rust_warc"
version = "1.0.0"
authors = ["Otto <otto@ot-to.nl>"]
edition = "2018"
description = "A high performance and easy to use Web Archive (WARC) file reader"
keywords = ["warc", "web", "archive", "parser"]
categories = ["parser-implementations"]

repository = "https://github.com/orottier/rust-warc"
readme = "README.md"
license = "MIT"

[dependencies]
